bin_PROGRAMS = fgddem2pgsql

fgddem2pgsql_SOURCES = \
  band.c \
  band.h \
  bandbuffer.c \
  bandbuffer.h \
  datalist.c \
  datalist.h \
  datalistcell.c \
  datalistcell.h \
  endian.c \
  endian.h \
  fgddemreader.c \
  fgddemreader.h \
  printerror.c \
  printerror.h \
  rasterbuffer.c \
  rasterbuffer.h \
  rasterheader.h \
  utils.h \
  writer.c \
  writer.h \
  fgddem2pgsql.c

fgddem2pgsql_LDADD = $(EXPAT_LIBS)

